modules/gdscript/tests/scripts/analyzer/errors/return_object_in_void_func.gd
func test() -> void:
	return Resource.new()
